2016-01-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* imaplogin.c (starttls): flush stdin after negotiating STARTTLS.

2016-01-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix Courier-IMAP rpm build on pre-systemd systems.

4.16.2

2015-06-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* imap/mailboxlist.c (match_mailbox_prep): Use strncmp instead of
	memcmp, to pacify overzealous static analysis checkers.

2015-05-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* Drop SSLv3 from TLS_CIPHER_LIST.

2015-06-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* imap, pop3: Added AUTH_MKHOMEDIR_SKEL setting.

4.16.1

2015-04-25  Giovanni Bechis <giovanni@openbsd.org>

	* maildircache.c: fix use after free.

	* mkdhparams: make compatible with libressl

2015-03-04  Sam Varshavchik  <mrsam@courier-mta.com>

	* Handle 01-Jan-1970 for date-based searches.

2015-02-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Update to courier-unicode 1.2.

2015-02-24  Sam Varshavchik  <mrsam@courier-mta.com>

	* Add the makeimapaccess script.

4.16.0

2014-10-21  Bernard Quatermass <bqcourier@quatermass.co.uk>

	* tcpd/libcouriertls.c: add parsing options for different protocol
	combination.

2014-10-21  坂元 英紀 <hs@on-sky.net>

	* Update comments in *ssl config files.

2014-10-15  Rob Austein <sra@hactrn.net>

	* libs/tcpd/libcouriertls.c (tls_create): Set SSL_OP_NOSSLv3 flag,
	to disable SSL3 support.

2014-10-11  Sam Varshavchik  <mrsam@courier-mta.com>

	* mkdhparams: TLS_DHPARAMS environmnt variable overrides default
	DH parameter file location.

	* courier-imap.spec.in: generate the default DH parameter file and
	package it into the rpm, instead of generating one on the first
	start.

2014-10-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* libs/maildir/maildirinfo.c (maildir_info_imapmunge): Fix
	UTF-8 charset name.

2014-09-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* tcpd/libcouriertls.c (tls_create): Initialize temporary ecdh
	parameters.
